# AnomalySVMSample

./: .gitignore  README.md  anomary_test.ipynb  create_sample.py  learn_svm.py  pyproject.toml
.devcontainer/: devcontainer.json
